Bottom Banner Update

--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - FamilySys</p>
+            <p>&copy; @DateTime.Now.Year - FamilySys</p>
         </footer>
     </div>
 
