添加记录夜间模式的cookie

--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
 			        <li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
 		        </ul>
 		        <ul class="nav navbar-right navbar-nav" style="background-color: azure">
-			        <li>
-				        <a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;">日间</a>
-			        </li>
+					<li>
+						<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
+					</li>
 		        </ul>
 	        </div>
         </div>
