--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -1,77 +1,138 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - 家庭事务分配与统计管理系统</title>
 
-    <environment include="Development">
-	    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+	<environment include="Development">
+		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="~/css/site.css" />
+	</environment>
+	<environment exclude="Development">
+		<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+		<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+	</environment>
 </head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-				<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统</a>
-            </div>
-	        <div class="navbar-collapse collapse">
-		        <ul class="nav navbar-nav">
-			        <li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
-		        </ul>
-		        <ul class="nav navbar-right navbar-nav" style="background-color: azure">
-					<li>
-						<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
-					</li>
-		        </ul>
-	        </div>
-        </div>
-    </nav>
+	@if (Context.Request.Cookies["mode"] == "night") {
+		<body style="background-color: #333; color: #F5F5F5;">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
+					</ul>
+					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
+						<li>
+							<a id="chg-mode" style="background-color: #000; color: #fff;" onclick="changeMode('chg-mode')">夜间</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <partial name="_CookieConsentPartial" />
+		<partial name="_CookieConsentPartial"/>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - FamilySys</p>
-        </footer>
-    </div>
+		<div class="container body-content">
+			@RenderBody()
+			<hr/>
+			<footer>
+				<p>&copy; @DateTime.Now.Year - FamilySys</p>
+			</footer>
+		</div>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+		<environment include="Development">
+			<script src="~/lib/jquery/dist/jquery.js"></script>
+			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+			<script src="~/js/site.js" asp-append-version="true"></script>
+		</environment>
+		<environment exclude="Development">
+			<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+			        asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+			        asp-fallback-test="window.jQuery"
+			        crossorigin="anonymous"
+			        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+			</script>
+			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+			        asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+			        asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+			        crossorigin="anonymous"
+			        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+			</script>
+			<script src="~/js/site.min.js" asp-append-version="true"></script>
+		</environment>
 
-    @RenderSection("Scripts", required: false)
-</body>
+		@RenderSection("Scripts", required: false)
+		</body>
+	} else if(Context.Request.Cookies["mode"] == "sun") {
+		<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
+					</ul>
+					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
+						<li>
+							<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<partial name="_CookieConsentPartial" />
+
+		<div class="container body-content">
+			@RenderBody()
+			<hr />
+			<footer>
+				<p>&copy; @DateTime.Now.Year - FamilySys</p>
+			</footer>
+		</div>
+
+		<environment include="Development">
+			<script src="~/lib/jquery/dist/jquery.js"></script>
+			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+			<script src="~/js/site.js" asp-append-version="true"></script>
+		</environment>
+		<environment exclude="Development">
+			<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+			        asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+			        asp-fallback-test="window.jQuery"
+			        crossorigin="anonymous"
+			        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+			</script>
+			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+			        asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+			        asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+			        crossorigin="anonymous"
+			        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+			</script>
+			<script src="~/js/site.min.js" asp-append-version="true"></script>
+		</environment>
+
+		@RenderSection("Scripts", required: false)
+		</body>
+}
 </html>
