添加访客查看成员功能

--- a/FamilySys/Views/Login/Index.cshtml
+++ b/FamilySys/Views/Login/Index.cshtml
@@ -1,6 +1,8 @@
-﻿
-@{
-    ViewData["Title"] = "登录";
+﻿@{
+	ViewData["Title"] = "登录";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2 align="center">登录</h2>
 
 
