--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -16,8 +16,8 @@
 		<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
 	</environment>
 </head>
-	@if (Context.Request.Cookies["mode"] == "night") {
-		<body style="background-color: #333; color: #F5F5F5;">
+@if (Context.Request.Cookies["mode"] == "night") {
+	<body style="background-color: #333; color: #F5F5F5;">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
@@ -27,86 +27,20 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统 - @ViewData["Title"]</a>
+					<a asp-area="" asp-controller="Member" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统 - @ViewData["Title"]</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
-						<li><a asp-area="" asp-controller="Home" asp-action="Members">家庭成员</a></li>
+						<li><a asp-area="" asp-controller="Member" asp-action="Index">主页</a></li>
 					</ul>
-					<ul class="nav navbar-right navbar-nav">
+					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
+						<li>
+
+						</li>
+					</ul>
+					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 						<li>
 							<a id="chg-mode" style="background-color: #000; color: #fff;" onclick="changeMode('chg-mode')">夜间</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-right navbar-nav">
-						<li>
-							<a asp-area="" asp-controller="Login" asp-action="Index">你好访客，请登录</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
-		<partial name="_CookieConsentPartial"/>
-
-		<div class="container body-content">
-			@RenderBody()
-			<hr/>
-			<footer>
-				<p>&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统</p>
-			</footer>
-		</div>
-
-		<environment include="Development">
-			<script src="~/lib/jquery/dist/jquery.js"></script>
-			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-			<script src="~/js/site.js" asp-append-version="true"></script>
-		</environment>
-		<environment exclude="Development">
-			<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-			        asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-			        asp-fallback-test="window.jQuery"
-			        crossorigin="anonymous"
-			        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-			</script>
-			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-			        asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-			        asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-			        crossorigin="anonymous"
-			        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-			</script>
-			<script src="~/js/site.min.js" asp-append-version="true"></script>
-		</environment>
-
-		@RenderSection("Scripts", required: false)
-		</body>
-	} else if(Context.Request.Cookies["mode"] == "sun") {
-		<body>
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统 - @ViewData["Title"]</a>
-				</div>
-				<div class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
-						<li><a asp-area="" asp-controller="Home" asp-action="Members">家庭成员</a></li>
-					</ul>
-					<ul class="nav navbar-right navbar-nav">
-						<li>
-							<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-right navbar-nav">
-						<li>
-							<a asp-area="" asp-controller="Login" asp-action="Index">你好访客，请登录</a>
 						</li>
 					</ul>
 				</div>
@@ -130,21 +64,80 @@
 		</environment>
 		<environment exclude="Development">
 			<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-			        asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-			        asp-fallback-test="window.jQuery"
-			        crossorigin="anonymous"
-			        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+					asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+					asp-fallback-test="window.jQuery"
+					crossorigin="anonymous"
+					integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
 			</script>
 			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-			        asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-			        asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-			        crossorigin="anonymous"
-			        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+					asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+					asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+					crossorigin="anonymous"
+					integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
 			</script>
 			<script src="~/js/site.min.js" asp-append-version="true"></script>
 		</environment>
 
 		@RenderSection("Scripts", required: false)
-		</body>
+	</body>
+} else if (Context.Request.Cookies["mode"] == "sun") {
+	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">家庭事务分配与统计管理系统 - @ViewData["Title"]</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a asp-area="" asp-controller="Home" asp-action="Index">主页</a></li>
+					</ul>
+					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
+						<li>
+							<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<partial name="_CookieConsentPartial" />
+
+		<div class="container body-content">
+			@RenderBody()
+			<hr />
+			<footer>
+				<p>&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统</p>
+			</footer>
+		</div>
+
+		<environment include="Development">
+			<script src="~/lib/jquery/dist/jquery.js"></script>
+			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+			<script src="~/js/site.js" asp-append-version="true"></script>
+		</environment>
+		<environment exclude="Development">
+			<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+					asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+					asp-fallback-test="window.jQuery"
+					crossorigin="anonymous"
+					integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+			</script>
+			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+					asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+					asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+					crossorigin="anonymous"
+					integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+			</script>
+			<script src="~/js/site.min.js" asp-append-version="true"></script>
+		</environment>
+
+		@RenderSection("Scripts", required: false)
+	</body>
 }
 </html>
