--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 					</ul>
 					<ul class="nav navbar-right navbar-nav">
 						<li>
-							<a id="chg-mode" style="background-color: #000; color: #fff;" onclick="changeMode('chg-mode')">夜间</a>
+							<a id="chg-mode" style="background-color: #000; color: #fff; text-align: center;" onclick="changeMode('chg-mode')">夜间</a>
 						</li>
 					</ul>
 					<ul class="nav navbar-right navbar-nav">
