--- a/FamilySys/Views/Login/Index.cshtml
+++ b/FamilySys/Views/Login/Index.cshtml
@@ -1,8 +1,50 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+@model FamilySys.Models.ViewModels.UserLoginViewModel
+@{
 	ViewData["Title"] = "登录";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2 align="center">登录</h2>
-
-
+<div style="text-align: center">
+	@using (Html.BeginForm("Login", "Login", FormMethod.Post))
+	{
+		<table class="table" style="margin: auto; width: 400px;">
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.Username)
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.Username, new {@class = "form-control", @placeholder="用户名"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.Username)
+				</td>
+			</tr>
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.Password)
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.Password, new {@class = "form-control", @placeholder="密码"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.Password)
+				</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td>
+					@Html.DisplayFor(Model => Model.ErrMessage)
+				</td>
+				<td></td>
+			</tr>
+		</table>
+		<div>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<input type="submit" name="LoginBtn" class="btn btn-primary" />
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<input type="reset" name="LoginReset" class="btn btn-danger" />
+		</div>
+	}
+</div>
