--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -21,6 +21,10 @@
 		color: red;
 		font-size: smaller;
 	}
+	.field-validation-valid {
+		color: red;
+		font-size: smaller;
+	}
 </style>
 	@if (Context.Request.Cookies["mode"] == "night") {
 <body style="background-color: #333; color: #F5F5F5;">
