--- a/FamilySys/Views/Home/nonMemberAlarm.cshtml
+++ b/FamilySys/Views/Home/nonMemberAlarm.cshtml
@@ -11,7 +11,7 @@
 <body>
 <form id="form1" runat="server">
 	<div>
-		<label>您尚未登陆</label>
+		<label style="color: red">您尚未登陆</label>
 	</div>
 	<br/>
 	<div id='div1'>
