--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -35,12 +35,12 @@
 					</ul>
 					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 						<li>
-
+							<a id="chg-mode" style="background-color: #000; color: #fff;" onclick="changeMode('chg-mode')">夜间</a>
 						</li>
 					</ul>
-					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
+					<ul class="nav navbar-right navbar-nav">
 						<li>
-							<a id="chg-mode" style="background-color: #000; color: #fff;" onclick="changeMode('chg-mode')">夜间</a>
+							<a asp-area="" asp-controller="Member" asp-action="Logout">登出</a>
 						</li>
 					</ul>
 				</div>
@@ -100,6 +100,11 @@
 					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 						<li>
 							<a id="chg-mode" style="background-color: #d2691e; color: #e0ffff;" onclick="changeMode('chg-mode')">日间</a>
+						</li>
+					</ul>
+					<ul class="nav navbar-right navbar-nav">
+						<li>
+							<a asp-area="" asp-controller="Member" asp-action="Logout">登出</a>
 						</li>
 					</ul>
 				</div>
