--- a/FamilySys/Views/Member/Index.cshtml
+++ b/FamilySys/Views/Member/Index.cshtml
@@ -1,6 +1,69 @@
 ﻿
 @{
-    ViewData["Title"] = "家庭成员";
-    Layout = "~/Views/Shared/_MemberLayout.cshtml";
+	ViewData["Title"] = "家庭成员";
+	Layout = "~/Views/Shared/_MemberLayout.cshtml";
 }
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+	<ol class="carousel-indicators">
+		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#myCarousel" data-slide-to="1"></li>
+	</ol>
+
+	<div class="carousel-inner" role="listbox">
+
+		<div class="item active">
+			<img src="~/images/banner1.svg" alt="Member" class="img-responsive" />
+			<div class="carousel-caption" role="option">
+				<p>
+					你好，
+				</p>
+			</div>
+		</div>
+		<div class="item">
+			<img src="~/images/banner1.svg" alt="FamilySys" class="img-responsive" />
+			<div class="carousel-caption" role="option">
+				<p>
+					易用、高效的家庭事务管理解决方案
+				</p>
+			</div>
+		</div>
+
+	</div>
+
+	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
+</div>
+
+<div class="row">
+	<div class="col-md-6">
+		<h2>功能 - 家庭成员</h2>
+		<ul>
+			<li>
+				家庭成员 - 查看家庭成员信息
+			</li>
+			<li>
+				家庭事务 - 查看家庭事务信息
+			</li>
+			<li>
+				...
+			</li>
+		</ul>
+	</div>
+
+	<div class="col-md-6">
+		<h2>部署及使用</h2>
+		<ul>
+			<li>
+				<p>在控制台执行指令</p>
+				<pre>dotnet run FamilySys</pre>
+			</li>
+		</ul>
+	</div>
+</div>
