--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -4,6 +4,18 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - 家庭事务分配与统计管理系统</title>
+	
+	<style>
+		.field-validation-error {
+			color: red;
+			font-size: smaller;
+		}
+
+		.field-validation-valid {
+			color: red;
+			font-size: smaller;
+		}
+	</style>
 
 	<environment include="Development">
 		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -53,7 +65,10 @@
 			@RenderBody()
 			<hr />
 			<footer>
-				<p>&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统</p>
+				<p>
+					&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统 by
+					<a href="https://azhuge233.com" target="_blank">azhuge233</a>
+				</p>
 			</footer>
 		</div>
 
@@ -117,7 +132,10 @@
 			@RenderBody()
 			<hr />
 			<footer>
-				<p>&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统</p>
+				<p>
+					&copy; @DateTime.Now.Year - 家庭事务分配与统计管理系统 by
+					<a href="https://azhuge233.com" target="_blank">azhuge233</a>
+				</p>
 			</footer>
 		</div>
 
