完善多项功能 添加主页图片 添加成员查看成员功能 添加个人信息视图模型 右上角用户名获取方式由模型转为ViewBag

--- a/FamilySys/Views/Home/Index.cshtml
+++ b/FamilySys/Views/Home/Index.cshtml
@@ -8,15 +8,30 @@
 		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 		<li data-target="#myCarousel" data-slide-to="1"></li>
 		<li data-target="#myCarousel" data-slide-to="2"></li>
+		<li data-target="#myCarousel" data-slide-to="3"></li>
 	</ol>
 
 	<div class="carousel-inner" role="listbox">
 
 		<div class="item active">
-			<img src="~/images/banner1.svg" alt="FamilySys" class="img-responsive" />
+			<img src="~/images/Hello.png" alt="Hello" class="img-responsive" />
+			<div class="carousel-caption" role="option">
+				<p>
+					你好，访客
+				</p>
+				<p style="font-size: small; height: 9px">
+					Photo by <a style="color: aliceblue" href="https://unsplash.com/photos/WHUDOzd5IYU?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Adam Solomon</a> on <a style="color: aliceblue" href="/search/photos/hello?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+				</p>
+			</div>
+		</div>
+		<div class="item">
+			<img src="~/images/FamilySys.png" alt="FamilySys" class="img-responsive" />
 			<div class="carousel-caption" role="option">
 				<p>
 					易用、高效的家庭事务管理解决方案
+				</p>
+				<p style="font-size: small; height: 9px">
+					Photo by <a style="color: aliceblue" href="https://unsplash.com/photos/cMOpU7Xg4Hc?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Fancycrave</a> on <a style="color: aliceblue" href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
 				</p>
 			</div>
 		</div>
@@ -24,7 +39,7 @@
 			<img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
 			<div class="carousel-caption" role="option">
 				<p>
-					在任意平台运行
+					ASP.NET Core - 在任意平台运行
 				</p>
 			</div>
 		</div>
@@ -32,7 +47,7 @@
 			<img src="~/images/bootstrap.png" alt="Bootstrap" class="img-responsive" />
 			<div class="carousel-caption" role="option">
 				<p>
-					简洁、直观、强悍的前端开发框架
+					Bootstrap - 简洁、直观、强悍的前端开发框架
 				</p>
 			</div>
 		</div>
@@ -80,7 +95,7 @@
 	<div class="col-md-4">
 		<h2>技术</h2>
 		<ul>
-			<li>使用.Net Core，实现跨平台（Windows，OSX，Linux）部署</li>
+			<li>使用.Net Core，实现跨平台（Windows、OSX 和 Linux）</li>
 			<br />
 			<li>使用主题 <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
 		</ul>
