--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -44,6 +44,7 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li><a asp-area="" asp-controller="Member" asp-action="Index">主页</a></li>
+						<li><a asp-area="" asp-controller="Member" asp-action="Members">家庭成员</a></li>
 					</ul>
 					<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 						<li>
@@ -51,6 +52,9 @@
 						</li>
 					</ul>
 					<ul class="nav navbar-right navbar-nav">
+						<li>
+							<a >你好，@ViewBag.Username</a>
+						</li>
 						<li>
 							<a asp-area="" asp-controller="Member" asp-action="Logout">登出</a>
 						</li>
