多项改动 增加个人信息修改 进一步划分视图模型层级

--- a/FamilySys/Views/Member/MyInfo.cshtml
+++ b/FamilySys/Views/Member/MyInfo.cshtml
@@ -1,11 +1,81 @@
-﻿
+﻿@using FamilySys.Models.ViewModels
+@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+@model FamilySys.Models.ViewModels.MemberViewModel.Member_MyInfo_ChgPwd_ViewModel
 @{
     ViewData["Title"] = "MyInfo";
     Layout = "~/Views/Shared/_MemberLayout.cshtml";
 }
 
 <div class="row">
-    <div></div>
+	<h1 align="center">我的信息</h1>
+	@Html.BeginForm("ChgInfo", "Member", HttpMethod.Post) {
+	<div class="col-md-6" align="center">
+		<h2>查看/修改基本信息</h2>
+		<table class="table" id="mainTable" style="margin: auto; text-align: center">
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.MyInfoViewModel.ID, new {@style = "width:60px;"})
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.MyInfoViewModel.ID, new {@class = "form-control", @readonly = "true", @style = "width: 110px"})
+				</td>
+			</tr>
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.MyInfoViewModel.Username, new {@style = "width:90"})
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.MyInfoViewModel.Username, new { @disabled="true", @class = "form-control", @placeholder = "用户名", @style = "width: 200px"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.MyInfoViewModel.Username)
+				</td>
+			</tr>
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.MyInfoViewModel.Sex)
+				</td>
+				<td>
+					@Html.DropDownListFor(Model => Model.MyInfoViewModel.Sex, @Model.MyInfoViewModel.SexList, "选择性别", new { @disabled = "true", @class = "form-control", @style = "width: auto"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.MyInfoViewModel.Sex)
+				</td>
+			</tr>
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.MyInfoViewModel.Phone)
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.MyInfoViewModel.Phone, new { @disabled = "true", @class = "form-control", @placeholder = "电话", @style = "width: 200px"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.MyInfoViewModel.Phone)
+				</td>
+			</tr>
+			<tr>
+				<td>
+					@Html.LabelFor(Model => Model.MyInfoViewModel.Mail)
+				</td>
+				<td>
+					@Html.TextBoxFor(Model => Model.MyInfoViewModel.Mail, new { @disabled = "true", @class = "form-control", @placeholder = "邮箱", @style = "width: 200px"})
+				</td>
+				<td>
+					@Html.ValidationMessageFor(Model => Model.MyInfoViewModel.Mail)
+				</td>
+			</tr>
+		</table>
+		<div align="center">
+			<input type="hidden" id="ChgInfoBtn" name="ChgInfoBtn" class="btn btn-success" />
+			<input type="button" id="confirmBtn" value="更改" onclick="ChgTextBoxStats('MyInfoViewModel_Username', 'MyInfoViewModel_Sex', 'MyInfoViewModel_Phone', 'MyInfoViewModel_Mail', 'ChgInfoBtn', 'confirmBtn')" class="btn btn-primary"/>
+		</div>
+	</div>
+	}
+	@Html.BeginForm("ChgPwd", "Member", HttpMethod.Post) {
+	<div class="col-md-6" align="center">
+		<h2>更改密码</h2>
+	</div>
+	}
 </div>
-<h2>我的信息</h2>
+
 
