--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -53,7 +53,7 @@
 					</ul>
 					<ul class="nav navbar-right navbar-nav">
 						<li>
-							<a >你好，@ViewBag.Username</a>
+							<a asp-controller="Member" asp-action="MyInfo">你好，@ViewBag.Username</a>
 						</li>
 						<li>
 							<a asp-area="" asp-controller="Member" asp-action="Logout">登出</a>
