Minify static assets

--- a/FamilySys/Views/Shared/_Layout.cshtml
+++ b/FamilySys/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
 	<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
 	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </body>
-	} else if(Context.Request.Cookies["mode"] == "sun") {
+	} else {
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
