完善部分页面

--- a/FamilySys/Views/Admin/Index.cshtml
+++ b/FamilySys/Views/Admin/Index.cshtml
@@ -58,6 +58,9 @@
 				家庭事务 - 查看和管理家庭事务信息
 			</li>
 			<li>
+				你好，管理员 - 查看和修改个人信息、修改密码、配置邮件收发地址 以及 配置Bark推送地址
+			</li>
+			<li>
 				...
 			</li>
 		</ul>
