--- a/FamilySys/Views/Login/Index.cshtml
+++ b/FamilySys/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
 @model FamilySys.Models.ViewModels.UserLoginViewModel
 @{
-	ViewData["Title"] = "登录";
+	ViewData["Title"] = "访客";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Html.Raw(TempData["msg"])
