--- a/FamilySys/Views/Member/MyInfo.cshtml
+++ b/FamilySys/Views/Member/MyInfo.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
 @model FamilySys.Models.ViewModels.MemberViewModel.Member_MyInfo_ChgPwd_ViewModel
 @{
-    ViewData["Title"] = "MyInfo";
+    ViewData["Title"] = "家庭成员";
     Layout = "~/Views/Shared/_MemberLayout.cshtml";
 }
 
