--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -95,7 +95,7 @@
 
 		@RenderSection("Scripts", required: false)
 	</body>
-} else if (Context.Request.Cookies["mode"] == "sun") {
+} else {
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
