--- a/FamilySys/Views/Admin/Members.cshtml
+++ b/FamilySys/Views/Admin/Members.cshtml
@@ -1,8 +1,28 @@
-﻿
+﻿@using FamilySys.Models.DbModels
+@model IQueryable<FamilySys.Models.DbModels.User>
 @{
-    ViewData["Title"] = "管理员";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+	ViewData["Title"] = "管理员";
+	Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Members</h2>
+<h2>家庭成员</h2>
+
+<table class="table">
+	<tr>
+		<th style="text-align: center">ID</th>
+		<th style="text-align: center">姓名</th>
+		<th style="text-align: center">性别</th>
+		<th style="text-align: center">电话</th>
+		<th style="text-align: center">邮箱</th>
+	</tr>
+	@foreach (var each in Model) {
+		<tr>
+			<td style="text-align: center">@each.ID</td>
+			<td style="text-align: center">@each.Username</td>
+			<td style="text-align: center">@each.Sex</td>
+			<td style="text-align: center">@each.Phone</td>
+			<td style="text-align: center">@each.Mail</td>
+		</tr>
+	}
+</table>
 
